[package]
name = "rustpython-common"
version = "0.0.0"
authors = ["RustPython Team"]
edition = "2018"

[features]
threading = ["parking_lot"]

[dependencies]
parking_lot = { version = "0.11.0", optional = true }
once_cell = "1.4"
num-traits = "0.2"
num-complex = "0.3"
num-bigint = "0.3"
lexical-core = "0.7"
hexf-parse = "0.1.0"
cfg-if = "0.1"
once_cell = "1.4.1"
ascii = "1.0"

[dev-dependencies]
rand = "0.7.3"
